--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 * {
   margin: 0;
@@ -12,30 +12,34 @@
 
 html {
   scroll-behavior: smooth;
+  /* -webkit-transition: all 0.2s ease; */
 }
 
 body {
   -webkit-font-smoothing: antialiased;
+  font-family: 'Roboto', sans-serif;
 }
 
 :root {
-  font-family: 'Oswald', sans-serif;
-  --foreground-rgb: 0, 0, 0;
+  font-family: 'Roboto', sans-serif;
+    /* --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+    */
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  /* :root {
+                --foreground-rgb: 255, 255, 255;
+                  --background-start-rgb: 0, 0, 0;
+                  --background-end-rgb: 0, 0, 0;
+  */
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+        */
 }
