--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -48,12 +48,13 @@
     opacity: 0;
 }
 
-.mask {
-    mask-image: url('../../public/mask.svg');
-    mask-repeat: no-repeat;
-    mask-size: 400px;
-    // background: #ec4e39;
-    // position: absolute;
-    width: 100%;
-    height: 100%;
-}
+// .mask {
+//     mask-image: url('../../public/mask.svg');
+//     mask-repeat: no-repeat;
+//     mask-size: 40px;
+//         background: #ec4e39;
+//         position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     cursor: default;
+// }
