--- a/src/components/stickyCursor/style.module.scss
+++ b/src/components/stickyCursor/style.module.scss
@@ -10,9 +10,10 @@
 
 .dot {
     position: fixed;
+    margin-left:16px;
+    margin-top: 16px;
     width: 8px;
-    height: 8x;
-    // background-color: black;
+    height: 8px;
     border-radius: 50%;
     pointer-events: none;
 
