--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,19 @@ body {
 :root {
   font-family: 'Roboto', sans-serif;
 }
+
+.loader {
+  height: calc(100vh + 200px);
+  width: 100%;
+  position: fixed;
+}
+
+.loader svg {
+  height: 100%;
+  width: 100%;
+}
+
+.loader svg path {
+  stroke: black;
+  stroke-width: 1px;
+}
